# underactuated-rocket

./: .gitignore  LICENSE  README.md  System.py  comparing_mpcs.py  constants.py  helpers.py  interactive_kf_ilqr.py  kf_ilqr.py  mpc.py  pyproject.toml  state.py  system.py
examples/: mpc_stats.py  no_control.py  turn_radius.py
src/underactuated_rocket/: PID_Implementation.py  PID_statistics.py  Updated_PID_Implementation.py  constants.py  cost_functions.py  logger.py  mpc.py  plotting.py  state.py  system.py
tests/: test_helpers.py  test_state.py
