[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "underactuated-rocket"
version = "1.0.0"
dependencies = [
    "control==0.10.2",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
]
